# certwatch

./: .clinerules  .gitignore  .rooignore  Cargo.toml  README.md  certwatch-example.toml  certwatch.toml  flake.nix  justfile
docs/: 2025-07-05-code-review.md  2025-07-06-code-review.md  history.md  plan.md  pre-dns-filtering-plan.md  specs.md  tests-to-fix.md
src/: app.rs  cli.rs  config.rs  core.rs  deduplication.rs  dns.rs  enrichment.rs  formatting.rs  lib.rs  main.rs  matching.rs  network.rs  outputs.rs  rules.rs  services.rs  task_manager.rs  types.rs
src/dns/: health.rs  manager.rs  mod.rs  resolver.rs  test_utils.rs
src/enrichment/: fake.rs  health.rs  mod.rs  tsv_lookup.rs
src/internal_metrics/: logging_recorder.rs  mod.rs  server.rs  system.rs
src/metrics/: logging_recorder.rs
src/notification/: logging_subscriber.rs  manager.rs  mod.rs  slack.rs
src/utils/: heartbeat.rs
tests/: app.rs  bounded_concurrency.rs  certstream_client.rs  common.rs  config.rs  core_logic.rs  dns_failure.rs  enrichment_failure.rs  enrichment_integration.rs  enrichment_startup.rs  live_certstream_client.rs  live_enrichment.rs  live_hot_reload.rs  live_pattern_matching.rs  not_rules_integration.rs  notification_pipeline.rs  output_failure.rs  pattern_hot_reload.rs  rules.rs  shutdown_integration.rs  tsv_enrichment.rs  work_distribution.rs
tests/data/: ip-to-asn-test.tsv  ip2asn-combined-test.tsv  test-regex.txt
tests/dns/: failure.rs  metrics.rs  mod.rs  performance.rs
tests/enrichment/: failure.rs  startup.rs
tests/helpers/: app.rs  fake_dns.rs  fake_enrichment.rs  fs_watch.rs  mock_dns.rs  mock_matcher.rs  mock_output.rs  mock_slack.rs  mock_ws.rs  mod.rs  test_metrics.rs  test_utils.rs
tests/integrations/: app.rs  certstream_client.rs  config.rs  core_logic.rs  live_certstream_client.rs  metrics.rs  mod.rs  not_rules.rs  output_failure.rs  output_separation.rs  pre_dns_filtering.rs  shutdown.rs  slack_notification.rs  work_distribution.rs
tests/rules/: mod.rs
