[package]
name = "certwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
chrono = "0.4"
rand = "0.8"

# Dependencies for later tasks
regex = "1.10"
trust-dns-resolver = "0.23"
maxminddb = "0.24"
reqwest = { version = "0.11", features = ["json"] }
moka = { version = "0.12", features = ["future"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde_json = "1.0"
notify = "6.1"
arc-swap = "1.6"

# WebSocket dependencies for Epic 2
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }

[features]
live-tests = ["native-tls", "tokio-native-tls"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serde_json = "1.0"
ipnetwork = "0.20"
gag = "1.0.0"
mockito = "1.7.0"

[[test]]
name = "live_certstream_client"
required-features = ["live-tests"]

[[test]]
name = "live_pattern_matching"
required-features = ["live-tests"]

[[test]]
name = "live_hot_reload"
required-features = ["live-tests"]

[[test]]
name = "live_enrichment"
required-features = ["live-tests"]
