[package]
name = "certwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
async-trait = "0.1"
chrono = "0.4"
rand = "0.9.1"
csv = "1.3"
ipnetwork = { version = "0.21.1", features = ["serde"] }

# Dependencies for later tasks
regex = "1.10"
hickory-resolver = { version = "0.25", features = ["system-config", "tokio"] }
reqwest = { version = "0.12.22", features = ["json"] }
moka = { version = "0.12", features = ["future"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde_json = "1.0"
notify = { version = "8.1.0", features = ["crossbeam-channel"] }
arc-swap = "1.6"
blake3 = "1.5"
metrics = "0.24.2"
metrics-util = "0.20.0"

# WebSocket dependencies for Epic 2
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
rangemap = "1.5.1"
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
num_cpus = "1.17.0"
tokio-stream = "0.1.17"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[features]
live-tests = []
test-utils = []

[dev-dependencies]
tokio-test = "0.4"
certwatch = { path = ".", features = ["test-utils"] }
tempfile = "3.8"
serde_json = "1.0"
gag = "1.0.0"
mockito = "1.7.0"
serial_test = "3.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[[test]]
name = "live_certstream_client"
required-features = ["live-tests"]

[[test]]
name = "live_pattern_matching"
required-features = ["live-tests"]

[[test]]
name = "live_hot_reload"
required-features = ["live-tests"]

