[package]
name = "certwatch"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
async-trait = "0.1"
chrono = "0.4"
rand = "0.9.1"
csv = "1.3"
ipnetwork = { version = "0.21.1", features = ["serde"] }

# Dependencies for later tasks
regex = "1.10"
hickory-resolver = { version = "0.25", features = ["system-config", "tokio"] }
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
moka = { version = "0.12", features = ["future"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde_json = "1.0"
notify = { version = "8.1.0", features = ["crossbeam-channel"] }
arc-swap = "1.6"
blake3 = "1.5"

# WebSocket dependencies for Epic 2
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
rangemap = "1.5.1"
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
num_cpus = "1.17.0"
tokio-stream = "0.1.17"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
psl = "2.1.123"
serde_with = { version = "3.14.0", features = ["macros"] }
serde_yml = "0.0.12"
itertools = "0.14.0"
axum = "0.8.4"

[features]
live-tests = []
test-utils = []

[dev-dependencies]
tokio-test = "0.4"
certwatch = { path = ".", features = ["test-utils"] }
tempfile = "3.8"
serde_json = "1.0"
gag = "1.0.0"
mockito = "1.7.0"
serial_test = "3.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
tracing-appender = "0.2"
wiremock = "0.6.4"
once_cell = "1.21.3"

[[test]]
name = "live_certstream_client"
path = "tests/integrations/live_certstream_client.rs"
required-features = ["live-tests"]

[[test]]
name = "rules"
path = "tests/rules/mod.rs"

[[test]]
name = "dns_failure"
path = "tests/dns/failure.rs"

[[test]]
name = "enrichment_failure"
path = "tests/enrichment/failure.rs"

[[test]]
name = "enrichment_startup"
path = "tests/enrichment/startup.rs"

[[test]]
name = "tsv_enrichment"
path = "tests/enrichment/tsv.rs"

[[test]]
name = "app_integration"
path = "tests/integrations/app.rs"

[[test]]
name = "certstream_client_integration"
path = "tests/integrations/certstream_client.rs"

[[test]]
name = "config_integration"
path = "tests/integrations/config.rs"

[[test]]
name = "core_logic_integration"
path = "tests/integrations/core_logic.rs"

[[test]]
name = "not_rules_integration"
path = "tests/integrations/not_rules.rs"

[[test]]
name = "output_failure_integration"
path = "tests/integrations/output_failure.rs"

[[test]]
name = "shutdown_integration"
path = "tests/integrations/shutdown.rs"

[[test]]
name = "work_distribution_integration"
path = "tests/integrations/work_distribution.rs"

[[test]]
name = "output_separation_integration"
path = "tests/integrations/output_separation.rs"

